--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ stages:
             displayName: 'Azure Functions App Deploy: jebrook-linuxconsumptionpython'
             inputs:
               azureSubscription: '$(azureSubscription)'
-              appType: functionApp
+              appType: functionAppLinux
               appName: $(functionAppName)
               package: '$(Pipeline.Workspace)/drop/$(Build.BuildId).zip'
               deploymentMethod: zipDeploy
